# ha-s7

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: lint.yml  test.yml  validate.yml
custom_components/s7/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  number.py  sensor.py  services.py  services.yaml  strings.json  switch.py  text.py
custom_components/s7/translations/: en.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_diagnostic_sensors.py  test_init.py  test_services.py  test_text.py
