# ha-s7 is a Home Assistant custom integration, not a Python package.
# Runtime deps are declared in custom_components/s7/manifest.json.
# This file only carries dev tooling config and a dev dependency group.
#
# We still declare a minimal [project] block so that uv picks the right
# Python version. It is NOT installed as a package (no entrypoints,
# no custom_components registration).
[project]
name = "ha-s7-dev"
version = "0"
requires-python = ">=3.13,<3.14"

[tool.uv]
package = false

[dependency-groups]
# PEP 735 dependency group — installs dev tools without requiring the
# project itself to be installed as a package (which conflicts with HA's
# custom_components loader).
dev = [
    # python-snap7 4.0 is unreleased; install from master for now.
    "python-snap7 @ git+https://github.com/gijzelaerr/python-snap7.git@master",
    "homeassistant>=2024.12.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component>=0.13.170",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=3.6",
]

[tool.ruff]
line-length = 130
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.13"
# HA integrations are typically not mypy-strict — the HA ecosystem uses
# dynamic imports extensively, and strict-mode compliance across all HA
# APIs is not practical for third-party integrations.
check_untyped_defs = true
warn_redundant_casts = true
# custom_components/s7/ is an HA integration namespace, not a top-level
# `s7` package. Force mypy to use explicit package bases so it resolves
# our integration as `custom_components.s7` and the installed python-snap7
# `s7` package unambiguously.
explicit_package_bases = true
namespace_packages = true
mypy_path = "$MYPY_CONFIG_FILE_DIR"

# HA's internal modules don't ship stubs for all public APIs.
# Silence those specifically rather than globally suppressing imports,
# so mypy can still see python-snap7's py.typed symbols.
[[tool.mypy.overrides]]
module = "homeassistant.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_homeassistant_custom_component.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "voluptuous.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
